# IF4092-Tugas-Akhir

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  sonar-project.properties
.scannerwork/: report-task.txt
.sonarlint/: connectedMode.json
src/: .env.evaluation.example  .env.example  .env.test.example  profile_output  scripts.evaluation.ipynb  scripts.ipynb  scripts.test.ipynb
src/autocommit/: requirements.txt  scripts.test.ipynb
src/autocommit/core/: __init__.py  chains.py  constants.py  enums.py  git.py  models.py
src/autocommit/datapreparation/: __init__.py
src/autocommit/diff_parser/: __init__.py
src/autocommit/kopyt/: node.py
src/autocommit_evaluation/cmg/: __init__.py  evaluators.py  models.py
src/autocommit_evaluation/core/: enums.py  (+4 more)
src/program/: .env.dev  .env.evaluation.example  .env.example  .env.test.example  classifydiff.evaluation.py  classifydiff.test.py  dataset.ipynb  downloaddataset.py  evaluate.py  evaluateclassifydiff.py  evaluategeneratecommitmessage.py  evaluategeneratedata.py  evaluategethighlevelcontext.py  generatecommitmessage.evaluation.py  generatecommitmessage.py  generatecommitmessage.test.py  generatecontext.evaluation.py  generatecontext.py  generatecontext.test.py  generatedata.py  generateexamples.py  generateexamples.test.py  gethighlevelcontext.evaluation.py  gethighlevelcontext.py  gethighlevelcontext.test.py  requirements.txt  scripts.evaluation.ipynb  scripts.ipynb  scripts.test.ipynb  test.py  testclassifydiff.py  testevaluate.py  testgeneratecommitmessage.py  testgeneratedata.py  testgethighlevelcontext.py
(+131 files in other folders)
